stylesheets/_component.piano.scss
$piano-bg: #fafafa;

.piano-wrapper {
    background-color: color(white);
    border: 1px solid color(grey, lightest);
    position: relative;

    @include respond-min($screen-desktop) {
        overflow: hidden;
    }
}

.piano {
    background-color: $piano-bg;
    border-left: 1px solid color(grey, lightest);
    border-right: 1px solid color(grey, lightest);

    @include respond-min($screen-desktop) {
        border-left: 0;
        float: left;
        height: 83vh;
        margin-bottom: 0;
        overflow-x: hidden;
        padding-bottom: 40vh;
        width: 30%;
    }

    .no-messages {
        display: block;
        margin: 20px auto;
        text-align: center;
    }
}

.piano__items {
    list-style: none;
    margin: 0;
    padding: 0;
}

.piano__item {
    background-color: color(white);
    border-bottom: 1px solid color(grey, lightest);
    clear: both;
    overflow: hidden;

    > a {
        display: block;
        padding: $padding-base;
        text-decoration: none;

        @include respond-min($screen-desktop) {
            &:hover {
                background: color(gray, off-white);
            }
        }
    }
}

.piano__item.is-selected {
    background-color: color(white);

    @include respond-min($screen-desktop) {
        background: color(new);

        > a:hover {
            background: color(new);
        }
    }
}

.piano__item--unread {
    border-left: 5px solid color(danger);
}

.piano__item-badge {
    float: right;
    font-family: $font-family-light;
    font-weight: normal;
}

.piano__item-header {
    color: color(text);
    vertical-align: top;

    .is-selected & {
        border-bottom: 1px solid color(grey, lightest);
        padding-bottom: 5px;

        @include respond-min($screen-desktop) {
            border: 0;
            padding: 0;
        }
    }
}

.piano__item-content {
    clear: both;
    padding: $padding-base;

    .is-selected & {
        margin-top: $margin-base;

        @include respond-min($screen-desktop) {
            height: 100%;
            margin-top: 0;
            overflow-y: auto;
            padding: $padding-base 0 40vh;
            position: absolute;
            right: 10px;
            top: 10px;
            width: 68%;
        }
    }

    .piano-active-content & {
        display: block;
    }

    .message-reply {
        margin: $margin-base 0 0;
    }

    .message {
        padding: 0 0 $padding-base;
        width: 100%;

        *:last-child {
            padding-bottom: 0;
            margin-bottom: 0;
        }
    }

    .message__meta {
        font-family: $font-family-regular;
        margin-bottom: $margin-base;
    }

    .message__meta-list {
        list-style: none;
    }

    h4 {
        font-size: $font-size-base;

        .piano-active-content & {
            font-size: $font-size-large;
            font-weight: 400;
            margin-bottom: $margin-base * 2;
        }
    }
}

.piano__item-content-header {
    margin-bottom: $margin-base * 2;
    padding-bottom: $padding-base;
    border-bottom: 1px solid color(grey, lightest);
}

.piano__avatar {
    border-radius: 50%;
    float: left;
    height: 25px;
    margin-bottom: $margin-base / 2;
    margin-right: $margin-base;
    width: 25px;
}

.piano__user {
    color: #000;
}

.piano__title {
    clear: both;
    margin: 0;
}

.piano__time {
    clear: both;
    display: block;
    font-size: 14px;
}

.piano__form {
    background: none;
    margin-bottom: $margin-base;
    padding: 0 0 $padding-base * 2;
}

.piano__item-toggle {
    font-size: 20px;
    position: absolute;
    right: 20px;
    text-decoration: none;
    top: 10px;

    @include respond-min($screen-desktop) {
        display: none;
    }
}

.piano__item-content .message > .preview {
    display: block;
}

.message {
    overflow: hidden;
    padding: 1em $gutter-width 0;

    .preview > p {
        display: inline;
    }
}

.with-settings.piano__item-content {
    @include respond-min($screen-desktop) {
        padding-right: 35px;
    }
}

.with-settings .settings {
    -webkit-transition: none;
    height: auto;
    padding: 0 0 10px;
    position: static;
    transition: none;

    @include respond-min($screen-desktop) {
        -moz-transition: all .5s ease-in-out;
        -ms-transition: all .5s ease-in-out;
        -o-transition: all .5s ease-in-out;
        -webkit-transition: all .5s ease-in-out;
        height: 74vh;
        position: absolute;
        right: -230px;
        top: 0;
        transition: all .5s ease-in-out;
    }
}

.settings {
    background: none;
    width: 100%;

    @include respond-min($screen-desktop) {
        background-color: #fff;
        display: block;
        width: 250px;
    }

    .warning {
        padding: 10px;
    }
}

.settings__toggle,
.settings__title {
    display: none;

    @include respond-min($screen-desktop) {
        display: table-cell;
    }
}

.setting__actions {
    padding: 10px;
}

